Melhorias no login e organizacao de modelos

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,22 @@ ETCM_USERNAME=
 ETCM_PASSWORD=
 HEADLESS=false
 
+# Para forcar navegador visivel mesmo que HEADLESS=true
+# SHOW_BROWSER=true
+# WATCH_MODE=true
+# Ajuste o delay entre acoes quando visivel
+# SLOWMO_MS=200
+# Manter pausa apos tentativa de login para acompanhar/clicar no captcha
+# PAUSE_AFTER_LOGIN_MS=10000
+# Tempo maximo aguardando login manual/captcha antes de abortar
+# LOGIN_MANUAL_WAIT_MS=45000
+# Reutilizar sessao entre execucoes (ajuda a evitar captcha)
+# USE_STORAGE_STATE=true
+# Caminho do arquivo de sessao (cookies/localStorage)
+# STORAGE_STATE_PATH=storage_state.json
+# Abrir DevTools junto com o navegador (opcional)
+# DEVTOOLS=false
+
 # Opcional: caminho com modelos de ofícios (.docx) e modelo específico
 # Observação: arquivos .dotx não são suportados diretamente; salve uma cópia como .docx
 # OFICIO_TEMPLATES_DIR=C:\Users\20386\OneDrive - tcm.sp.gov.br\Ofícios\oficio_automation\Modelos Ofícios
@@ -27,4 +43,3 @@ HEADLESS=false
 
 # Se usar modelo .dotx e quiser apenas converter para .docx sem alterar o conteudo, ative:
 # OFICIO_CONVERT_ONLY=true
-
