--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,38 @@
-# Copie para .env e preencha, ou use variáveis de ambiente.
-ETCM_URL=https://homologacao-etcm.tcm.sp.gov.br/paginas/login.aspx
-ETCM_USERNAME=
-ETCM_PASSWORD=
+# Copie para .env e preencha (nao versionar credenciais).
+
+# Credenciais
+ETCM_USER=
+ETCM_PASS=
+
+# URL base (login do e-TCM)
+BASE_URL=https://homologacao-etcm.tcm.sp.gov.br/paginas/login.aspx
+
+# Downloads/artefatos
+DOWNLOAD_DIR=artifacts/downloads
+
+# Execucao
 HEADLESS=false
+SLOWMO_MS=150
+TIMEOUT_MS=30000
+MODE=run
+STEPS_PATH=docs/steps.yaml
 
-# Para forcar navegador visivel mesmo que HEADLESS=true
-# SHOW_BROWSER=true
-# WATCH_MODE=true
-# Ajuste o delay entre acoes quando visivel
-# SLOWMO_MS=200
-# Manter pausa apos tentativa de login para acompanhar/clicar no captcha
-# PAUSE_AFTER_LOGIN_MS=10000
-# Tempo maximo aguardando login manual/captcha antes de abortar
-# LOGIN_MANUAL_WAIT_MS=45000
-# Reutilizar sessao entre execucoes (ajuda a evitar captcha)
-# USE_STORAGE_STATE=true
-# Caminho do arquivo de sessao (cookies/localStorage)
-# STORAGE_STATE_PATH=storage_state.json
-# Abrir DevTools junto com o navegador (opcional)
-# DEVTOOLS=false
+# Sessao (para reduzir captcha)
+USE_STORAGE_STATE=true
+STORAGE_STATE_PATH=storage_state.json
 
-# Opcional: caminho com modelos de ofícios (.docx) e modelo específico
-# Observação: arquivos .dotx não são suportados diretamente; salve uma cópia como .docx
-# OFICIO_TEMPLATES_DIR=C:\Users\20386\OneDrive - tcm.sp.gov.br\Ofícios\oficio_automation\Modelos Ofícios
-# OFICIO_TEMPLATE=meu_modelo.docx
+# Processos
+# PROCESSOS_LIST=TC/011724/2020,TC/000123/2021
+# PROCESS_ALL=true
+# MAX_PROCESSOS=0
+# PROCESSO=
 
-# Opcional: URL do visualizador (VisualizarDocsProtocolo.aspx) para ir direto
-# ETCM_VIEWER_URL=https://homologacao-etcm.tcm.sp.gov.br/Paginas/VisualizarDocsProtocolo.aspx?c=SEU_TOKEN
-# PROCESSO_LABEL=viewer
+# Campos do formulario
+DESTINATARIO=Secretaria Municipal de Educacao
+RELATOR=
+DESCRICAO=Oficio gerado automaticamente
+STATUS_ENTREGA=Urgente
+PRAZO_DIAS=60
 
-# Opcional: URL do Gerenciador de Atos (GerenciaAto.aspx)
-# ETCM_GERENCIA_ATO_URL=https://homologacao-etcm.tcm.sp.gov.br/paginas/Ato/GerenciaAto.aspx?pc=...&pt=...&ar=...
-
-# Processamento em lote (lista de processos)
-# Defina PROCESSOS_LIST com processos separados por vírgula ou ponto-e-vírgula
-# Ex: PROCESSOS_LIST=TC/011724/2020,TC/000123/2021
-# Ou ative PROCESS_ALL=true para usar todos os processos da planilha exportada
-# MAX_PROCESSOS=0 (0 = sem limite)
-
-# Apenas anexar (pula download/geração); usa o DOCX mais recente em output/
-# ATTACH_ONLY=false
-
-# Se usar modelo .dotx e quiser apenas converter para .docx sem alterar o conteudo, ative:
-# OFICIO_CONVERT_ONLY=true
+# Anexo
+ANEXO_DOCX=
