Atualiza fluxo video silvana e automacao

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ STORAGE_STATE_PATH=storage_state.json
 # MAX_PROCESSOS=0
 # PROCESSO=
 
+# Filtros/visoes
+VISOES=Aposentadoria
+DISTRIBUIDO_PARA=
+
 # Campos do formulario
 DESTINATARIO=Secretaria Municipal de Educacao
 RELATOR=
